Add test to catch the deprecation warning escaping